kubernetes-networks/canary/02-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary
  namespace: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary
  template:
    metadata:
      labels:
        app: canary
    spec:
      containers:
      - name: canary
        image: tenki/web:1.1
        livenessProbe:
          tcpSocket:
            port: 8000
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
        volumeMounts:
          - name: app
            mountPath: /app
      volumes:
        - name: app
          emptyDir: {}
