kubernetes-networks/canary/03-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-svc
  namespace: canary
spec:
  selector:
    app: canary
  type: ClusterIP
  clusterIP: None
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
