kubernetes-networks/canary/04-canary-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: canary
  namespace: canary
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target:  /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "canary"
spec:
  rules:
  - host: web.local
    http:
      paths:
      - path: /web
        backend:
          serviceName: canary-svc
          servicePort: 8000
